# shmimviewGTK

./: .gitignore  CMakeLists.txt  README.md  mktestim  shmimview-resources.xml  shmimview-ui.c  shmimview.memcheck.supp  shmimviewGTK.c  theme.css
glade/: shmimview.glade  shmimview.glade.00  shmimview.glade.01
old/: shmimviewGTK  shmimviewGTK.c
src/: Config.h  Config.h.in  shmimview-process.c  shmimview-process.h  shmimview-scale.c  shmimview-scale.h  shmimview-view.c  shmimview-view.h  shmimview-zoom.c  shmimview-zoom.h  shmimview.c  shmimview.h
